# saga-llm-evaluation

./: .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  Dockerfile-gpu  README.md  docker-compose.yml  docker-entrypoint.sh  genindex.html  index.html  installation.md  modules.html  objects.inv  py-modindex.html  pyproject.toml  saga_llm_evaluation.helpers.embedding_metrics.md  saga_llm_evaluation.helpers.language_metrics.md  saga_llm_evaluation.helpers.llm_metrics.md  saga_llm_evaluation.helpers.md  saga_llm_evaluation.helpers.retrieval_metrics.md  saga_llm_evaluation.md  sagacify_llm_evaluation.helpers.html  sagacify_llm_evaluation.html  sagacify_llm_evaluation.model.html  sagacify_llm_evaluation.resources.html  search.html  searchindex.js  usage.md
.github/workflows/: cd.yaml  ci.yaml
_modules/: index.html
_modules/sagacify_llm_evaluation/: score.html
_modules/sagacify_llm_evaluation/helpers/: embedding_metrics.html  language_metrics.html  llm_metrics.html  utils.html
_sources/: modules.rst.txt  sagacify_llm_evaluation.helpers.rst.txt
doc_html/saga_llm_evaluation_ml/: index.html  score.html
doc_html/saga_llm_evaluation_ml/helpers/: embedding_metrics.html  index.html  language_metrics.html  llm_metrics.html  utils.html
doc_html/saga_llm_evaluation_ml/resources/: index.html
doc_md/saga_llm_evaluation_ml/: index.md  score.md
doc_md/saga_llm_evaluation_ml/helpers/: embedding_metrics.md  index.md  language_metrics.md  llm_metrics.md  utils.md
doc_md/saga_llm_evaluation_ml/resources/: index.md
docs/: conf.py  index.rst  installation.rst  saga_llm_evaluation.helpers.embedding_metrics.rst  saga_llm_evaluation.helpers.language_metrics.rst  saga_llm_evaluation.helpers.llm_metrics.rst  saga_llm_evaluation.helpers.retrieval_metrics.rst  saga_llm_evaluation.helpers.rst  saga_llm_evaluation.rst  sagacify_llm_evaluation.model.rst  sagacify_llm_evaluation.resources.rst  sagacify_llm_evaluation.rst  usage.rst
docs/_static/css/: custom.css
notebooks/: response.json  test.ipynb  test_score.ipynb  wtf.ipynb
saga_llm_evaluation/: __init__.py  score.py
saga_llm_evaluation/helpers/: embedding_metrics.py  language_metrics.py  llm_metrics.py  retrieval_metrics.py  utils.py
saga_llm_evaluation_ml/: __init__.py  score.py  scorer.json
saga_llm_evaluation_ml/helpers/: embedding_metrics.py  language_metrics.py  llm_metrics.py  utils.py
saga_llm_evaluation_ml/model/helpers/: embedding_metrics.py  language_metrics.py  llm_metrics.py  utils.py
sagacify_llm_evaluation/: score.py
sagacify_llm_evaluation/helpers/: embedding_metrics.py  language_metrics.py  llm_metrics.py  utils.py
tests/: __init__.py  test_embedding_metrics.py  test_helpers.py  test_language_metrics.py  test_llm_metrics.py  test_llm_metrics_mocks.py  test_retrieval_metrics.py  test_retrieval_metrics_mocks.py  test_score.py
