[tool.poetry]
name = "saga_llm_evaluation_ml"
version = "1.0.0"
description = ""
authors = ["Leonardo Remondini <leonardo.remondini@sagacify.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
transformers = "^4.21.1"
numpy = "^1.21.2"
spacy = "^3.1.3"
evaluate = "^0.4.1"
scikit-learn = "^1.3.1"
mauve-text = "^0.3.0"
bert-score = "^0.3.13"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13"
pylint-quotes = "^0.2.3"
black = "^22.10.0"
pytest = "^7.1.3"
pytest-env = "^0.8.1"

[[tool.poetry.source]]
name = "sagacify"
url = "https://pypiserver.sagacify.com/"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "saga_llm_evaluation_ml/__init__.py:__version__"
branch = "master"
version_toml = "pyproject.toml:tool.poetry.version"
commit_subject = 'chore(release): Release v{version} [skip ci]'
upload_to_pypi = false
upload_to_repository = false
upload_to_release = false
