[tool.poetry]
name = "saga-llm-evaluation"
version = "0.11.2"
description = "Versatile Python library designed for evaluating the performance of large language models in Natural Language Processing (NLP) tasks. Developed by Sagacify"
readme = "README.md"
authors = [
    "Leonardo Remondini <leonardo.remondini@sagacify.com>",
    "Lucie Navez <lucie.navez@sagacify.com>",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
transformers = "^4.21.1"
numpy = "^1.21.2"
spacy = "^3.1.3"
evaluate = "^0.4.1"
mauve-text = "^0.3.0"
bert-score = "^0.3.13"
torch = "2.1.1"
tensorflow = { version = "^2.14", markers = "sys_platform == 'linux'" }
tensorflow-macos = { version = "^2.14", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
elemeta = "1.0.7"
llama-cpp-python = "^0.2.11"
faiss-cpu = "^1.7.4"
langchain = "^0.2.15"
llama-index = "^0.11.3"
langchain-openai = "^0.1.23"
langchain-community = "^0.2.15"
nltk = "^3.9.1"
langchain-huggingface = "^0.0.3"
sphinx-rtd-theme = "^2.0.0"
sphinx-markdown-builder = "^0.6.7"
sphinx-emoji-favicon = "^0.2"

[tool.poetry.dev-dependencies]
pylint = "^2.13"
pylint-quotes = "^0.2.3"
black = "^22.10.0"
pytest = "^7.1.3"
pytest-env = "^0.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
jupyterlab = "^4.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "saga_llm_evaluation/__init__.py:__version__"
branch = "master"
version_toml = "pyproject.toml:tool.poetry.version"
commit_subject = 'chore(release): Release v{version} [skip ci]'
upload_to_pypi = false
upload_to_repository = false
upload_to_release = false
