[tool.poetry]
name = "saga-llm-evaluation"
version = "0.11.6"
description = "Versatile Python library designed for evaluating the performance of large language models in Natural Language Processing (NLP) tasks. Developed by Sagacify"
readme = "README.md"
authors = [
    "Leonardo Remondini <leonardo.remondini@sagacify.com>",
    "Lucie Navez <lucie.navez@sagacify.com>",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
evaluate = "^0.4.3"
spacy = ">=3.8.2"
torch = "^2.5.0"
transformers = "^4.45.2"
numpy = ">=1, <2"
langchain = "^0.3.4"
langchain-core = "^0.3.12"
llama-index = "^0.11.19"
nltk = "^3.9.1"
huggingface-hub = "^0.26.0"
langchain-community = "^0.3.3"
langchain-openai = "^0.2.3"
llama-cpp-python = "^0.2.11"
bert-score = "^0.3.13"
faiss-cpu = "^1.9.0"
scikit-learn = "^1.5.2"
mauve-text = "^0.4.0"

[tool.poetry.group.scorer]
optional = true

[tool.poetry.group.scorer.dependencies]
elemeta = "^1.3.2"

[tool.poetry.dev-dependencies]
pylint = "^2.13"
pylint-quotes = "^0.2.3"
black = "^22.10.0"
pytest = "^7.1.3"
pytest-env = "^0.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
jupyterlab = "^4.0.7"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^2.0.0"
sphinx-markdown-builder = "^0.6.7"
sphinx-emoji-favicon = "^0.2"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "saga_llm_evaluation/__init__.py:__version__"
branch = "master"
version_toml = "pyproject.toml:tool.poetry.version"
commit_subject = 'chore(release): Release v{version} [skip ci]'
upload_to_pypi = false
upload_to_repository = false
upload_to_release = false
